--- a/Question3.ipynb
+++ b/Question3.ipynb
@@ -9,30 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fontconfig warning: ignoring UTF-8: not a valid region tag\n",
-      "2022-04-19 00:38:10,294 - INFO - No config found.\n",
-      "2022-04-19 00:38:10,295 - INFO - Creating new config.\n",
-      "2022-04-19 00:38:10,297 - INFO - Using included version of MDmodule.\n",
-      "2022-04-19 00:38:10,335 - WARNING - MEME not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,376 - WARNING - MEMEW not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,422 - WARNING - DREME not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,467 - WARNING - Weeder not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,511 - WARNING - GADEM not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,518 - INFO - Using included version of MotifSampler.\n",
-      "2022-04-19 00:38:10,560 - WARNING - Trawler not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,565 - INFO - Using included version of Improbizer.\n",
-      "2022-04-19 00:38:10,566 - INFO - Using included version of BioProspector.\n",
-      "2022-04-19 00:38:10,567 - INFO - Using included version of Posmo.\n",
-      "2022-04-19 00:38:10,568 - INFO - Using included version of ChIPMunk.\n",
-      "2022-04-19 00:38:10,569 - INFO - Using included version of AMD.\n",
-      "2022-04-19 00:38:10,570 - INFO - Using included version of HMS.\n",
-      "2022-04-19 00:38:10,617 - WARNING - Homer not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,663 - WARNING - XXmotif not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,711 - WARNING - ProSampler not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,715 - WARNING - Yamda not in config\n",
-      "2022-04-19 00:38:10,762 - WARNING - DiNAMO not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,809 - WARNING - RPMCMC not found. To include it you will have to install it.\n",
-      "2022-04-19 00:38:10,815 - INFO - Configuration file: /Users/zhonglelin/.config/gimmemotifs/gimmemotifs.cfg\n"
+      "Fontconfig warning: ignoring UTF-8: not a valid region tag\n"
      ]
     },
     {
